Tons of AI changes/work, refactoring and space -> tab formatting